--- a/package.json
+++ b/package.json
@@ -2,20 +2,16 @@
   "name": "acopiaweb",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://julianvent.github.io/acopiaweb",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "lint": "next lint"
   },
   "dependencies": {
-    "gh-pages": "^6.3.0",
-    "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "next": "15.3.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
